correcting nav bar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,17 @@ body {
   height: 150px;
   width: 100%;
   background-color: #333;
-  border: 0px solid red;
+  border: 0px solid pink;
   color: whitesmoke;
-  margin-bottom: 15px;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   display:block;
   justify-content: center;
   align-items: center;
-  padding: 2%;
+  padding: 1%;
   line-height: 25px;
+  overflow: hidden;
+  margin-bottom: 0.8%;
 }
 
 .header > p{
@@ -29,8 +30,10 @@ body {
 }
 
 #logo{
+  display: flex;
   opacity: 0.6;
-  width: 10%;
+  width: 140px;
+  height: 100px;
   float: left;
   border: 0px solid red;
 }
